--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,6 +29,7 @@ jobs:
       - name: Install dependencies & build
         run: |
           npm ci
+          npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
